@@ -12,4 +12,5 @@ translation
     Zhengpeng Hou whoes update the traditional chinese translation
     Grzegorz Gibas whoes add the polosh translation
     Simone Solinas whoes add the italian translation
+    Stefan Kombrink whoes improve the popup window
 
