@@ -56,4 +56,5 @@
 	- add italian translation
 	- fix bug with simlinks to dictionaries
 	- add german translation
+	- improve popup window
 
